--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Neel Shah",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
